--- a/src/Boheme/CafeBundle/Resources/views/Wine/index.html.twig
+++ b/src/Boheme/CafeBundle/Resources/views/Wine/index.html.twig
@@ -1,63 +1,79 @@
-{% extends '::base.html.twig' %}
+{# src/Boheme/CafeBundle/Resources/views/Wine/index.html.twig #}
+{% extends 'NmsAdminBundle::layout.html.twig' %}
+
+{% set page_title = 'Wine list' %}
+
+{% block title %}
+{{ parent() }} {{ page_title }}
+{% endblock %}
+
+{% block stylesheets %}
+{% endblock %}
+
+{% block pagetitle %}{% endblock %}
+
+{% block breadcrumb %}{% endblock %}
 
 {% block body -%}
-    <h1>Wine list</h1>
-
-    <table class="records_list">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Note</th>
-                <th>Glassvolume</th>
-                <th>Glassprice</th>
-                <th>Carafevolume</th>
-                <th>Carafeprice</th>
-                <th>Bottlevolume</th>
-                <th>Bottleprice</th>
-                <th>Created</th>
-                <th>Createdby</th>
-                <th>Updated</th>
-                <th>Updatedby</th>
-                <th>Actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for entity in entities %}
-            <tr>
-                <td><a href="{{ path('wine_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
-                <td>{{ entity.title }}</td>
-                <td>{{ entity.note }}</td>
-                <td>{{ entity.glassvolume }}</td>
-                <td>{{ entity.glassprice }}</td>
-                <td>{{ entity.carafevolume }}</td>
-                <td>{{ entity.carafeprice }}</td>
-                <td>{{ entity.bottlevolume }}</td>
-                <td>{{ entity.bottleprice }}</td>
-                <td>{% if entity.created %}{{ entity.created|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ entity.createdby }}</td>
-                <td>{% if entity.updated %}{{ entity.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ entity.updatedby }}</td>
-                <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('wine_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('wine_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-        <ul>
-        <li>
-            <a href="{{ path('wine_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
-    {% endblock %}
+<!--=== Content Part ===-->
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="panel panel-grey margin-bottom-40">
+                <div class="panel-heading">
+                    <h3 class="panel-title"><i class="icon-glass"></i> {{ page_title }}</h3>
+                </div>
+                <div class="panel-body">
+                    <div class="col-md-9">
+                    {{ knp_pagination_filter(pagination, fields) }}
+                    </div>
+                    <div class="col-md-3">
+                        <div class="pull-right">
+                            <a href="{{ path('wine_new') }}" class="btn btn-u-green"><i class="icon-plus"></i> Add</a>
+                        </div>
+                    </div>
+                </div>
+                <table class="table">
+                    <thead>
+                        <tr>
+                        {# sorting of properties based on query components #}
+                            <th>{{ knp_pagination_sortable(pagination, 'Title', 'w.title') }}</th>
+                            <th{% if pagination.isSorted('w.note') %} class="sorted"{% endif %}>{{ knp_pagination_sortable(pagination, 'Notes', 'w.note') }}</th>
+                            <th>Variety</th>
+                            <th>Region</th>
+                            <th>Updated</th>
+                            <th>Updated By</th>
+                            <th style="width:100px">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for wine in pagination %}
+                        <tr>
+                            <td>{{ wine.title }}</td>
+                            <td>{{ wine.note }}</td>
+                            <td>{{ wine.variety }}</td>
+                            <td>{{ wine.region }}</td>
+                            <td>{% if wine.updated %}{{ wine.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
+                            <td>{{ wine.updatedby }}</td>
+                            <td>
+                                <a href="{{ path('wine_show', { 'id': wine.id }) }}" class="btn btn-info btn-xs">view</a>
+                                <a href="{{ path('wine_edit', { 'id': wine.id }) }}" class="btn btn-primary btn-xs">edit</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    </tbody>
+                </table>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="dataTables_info" id="record_info">{{pagination.TotalItemCount}} records in total.</div>
+                    </div>
+                    <div class="col-md-6">
+                        {{ knp_pagination_render(pagination) }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--=== End Content Part ===-->
+{% endblock %}
